k8s/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gan-inference-service
spec:
  selector:
    app: gan-inference
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
