k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gan-inference-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: PUT-YOUR-DOMAIN-HERE🌐🌐 
    http:
      paths:
      - path: /generate
        pathType: Prefix
        backend:
          service:
            name: gan-inference-service 
            port:
              number: 8080
